# opengl-cmake-template

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
src/: CMakeLists.txt  main.cpp
